src/test/ui/uninhabited/uninhabited-irrefutable.stderr
error[E0005]: refutable pattern in local binding: `Foo::A(_)` not covered
  --> $DIR/uninhabited-irrefutable.rs:27:9
   |
LL |     let Foo::D(_y, _z) = x;
   |         ^^^^^^^^^^^^^^ pattern `Foo::A(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
note: `Foo` defined here
  --> $DIR/uninhabited-irrefutable.rs:19:5
   |
LL | enum Foo {
   |      ---
LL |     A(foo::SecretlyEmpty),
   |     ^ not covered
   = note: the matched value is of type `Foo`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     let (_y, _z) = if let Foo::D(_y, _z) = x { (_y, _z) } else { todo!() };
   |     +++++++++++++++++                        +++++++++++++++++++++++++++++
help: alternatively, on nightly, you might want to use `#![feature(let_else)]` to handle the variant that isn't matched
   |
LL |     let Foo::D(_y, _z) = x else { todo!() };
   |                            ++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
